# ChangeLog for gnome-base/gnome-applets
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.307 2010/03/16 18:48:16 fauli Exp $

  16 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  gnome-applets-2.26.3-r1.ebuild:
  stable x86, bug 308549

  15 Mar 2010; nixnut <nixnut@gentoo.org> gnome-applets-2.26.3-r1.ebuild:
  ppc stable #308549

  12 Mar 2010; Brent Baude <ranger@gentoo.org>
  gnome-applets-2.26.3-r1.ebuild:
  Marking gnome-applets-2.26.3-r1 ppc64 stable for bug 308549

  11 Mar 2010; Pacho Ramos <pacho@gentoo.org>
  gnome-applets-2.26.3-r1.ebuild:
  amd64 stable, bug 308549

  10 Mar 2010; Joseph Jezak <josejx@gentoo.org> gnome-applets-2.28.0.ebuild:
  Marked ~ppc/~ppc64 for bug #296548.

  28 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  gnome-applets-2.28.0.ebuild:
  Add ~alpha/~ia64/~sparc

  17 Jan 2010; Jeroen Roovers <jer@gentoo.org> gnome-applets-2.26.3.ebuild:
  Stable for HPPA (bug #281427).

  10 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  gnome-applets-2.28.0.ebuild:
  Transfer Prefix keywords

  03 Dec 2009; Brent Baude <ranger@gentoo.org> gnome-applets-2.26.3.ebuild:
  Marking gnome-applets-2.26.3 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-applets-2.26.3.ebuild:
  alpha/ia64/sparc stable wrt #281427

  12 Nov 2009; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-applets-2.28.0.ebuild:
  intltool rules fix.

*gnome-applets-2.28.0 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-applets-2.26.2.ebuild, +gnome-applets-2.28.0.ebuild,
  +files/gnome-applets-2.28.0-stickynotes-duplicate-labels-ui.patch:
  New version for GNOME 2.28.

  24 Oct 2009; nixnut <nixnut@gentoo.org> gnome-applets-2.26.3.ebuild:
  ppc stable #281427

  17 Oct 2009; Markus Meier <maekke@gentoo.org> gnome-applets-2.26.3.ebuild:
  x86 stable, bug #281427

  08 Oct 2009; Olivier Crête <tester@gentoo.org>