@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-session
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-session/ChangeLog,v 1.250 2010/03/16 18:47:06 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-session/ChangeLog,v 1.251 2010/04/05 14:59:25 armin76 Exp $
+
+  05 Apr 2010; Raúl Porcel <armin76@gentoo.org>
+  gnome-session-2.26.2-r1.ebuild:
+  alpha/ia64/sparc stable wrt #308549
 
   16 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
   gnome-session-2.26.2-r1.ebuild:
