@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-applets
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.307 2010/03/16 18:48:16 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.308 2010/04/05 15:01:32 armin76 Exp $
+
+  05 Apr 2010; Raúl Porcel <armin76@gentoo.org>
+  gnome-applets-2.26.3-r1.ebuild:
+  alpha/ia64/sparc stable wrt #308549
 
   16 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
   gnome-applets-2.26.3-r1.ebuild:
